syntax = "proto3";

package manager.api.job;

option go_package = ".;job";
option java_multiple_files = true;
option java_package = "manager.api.job";
option java_outer_classname = "DeptV1";

import "validate/validate.proto";



message ListJobRequest {
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","created_at","updated_at"]}];
  optional string name = 5;
  optional string keyword = 6;
}

message ListJobReply {
  message Job {
    uint32 id = 1;
    string name = 2;
    string keyword = 3;
    optional string description = 4;
    optional bool status = 5;
    uint32 weight = 6;
    uint32 createdAt = 7;
    uint32 updatedAt = 8;
  }

  uint32 total = 1;
  repeated Job list = 2;
}

message CreateJobRequest {
  string name = 1[(validate.rules).string = {min_len: 1}];
  string keyword = 2[(validate.rules).string = {min_len: 1}];
  optional string description = 3;
  uint32 weight = 4;
}

message CreateJobReply {
  uint32 id = 1;
}

message UpdateJobRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  optional string name = 2[(validate.rules).string = {max_len: 128}];
  optional string description = 3;
  optional bool status = 4;
  optional uint32 weight = 5;
}

message UpdateJobReply {
}

message DeleteJobRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte:0}];
}

message DeleteJobReply {
}
